Object store: initial PUT implementation.
Signed-off-by: Thomas Leibovici <thomas.leibovici.@cea.fr>
Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Change-Id: I987668c11c8e8cac09d0a2d453397c62afa28fd1

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -3,8 +3,8 @@ AM_CFLAGS= $(CC_OPT) -D_TEST
 # autotools automatically generate a 'make check' target that:
 # 1) build check_PROGRAMS
 # 2) run TESTS and generate a summary
-check_PROGRAMS=test_common test_attrs test_mapper test_log
-TESTS=test_attrs test_mapper test_log
+check_PROGRAMS=test_common test_attrs test_mapper test_log test_put
+TESTS=test_attrs test_mapper test_log test_store.sh
 
 test_log_SOURCES=../log.c test_log.c
 test_common_SOURCES=../common.c ../log.c test_common.c
@@ -13,3 +13,6 @@ test_mapper_SOURCES=../mapper.c ../log.c test_mapper.c
 
 test_mapper_LDADD=-lcrypto
 test_attrs_LDADD=-ljansson
+
+test_put_SOURCES=../extent_utils.c ../store.c ../lrs.c ../attrs.c ../io.c ../mapper.c ../log.c test_put.c
+test_put_LDADD=-ljansson -lcrypto
