Mapper: Make object path from object ID/extent tag
Change-Id: I3255c3cdafa75e19b86bfef27c226cee40b5a641
Signed-off-by: Henri Doreau <henri.doreau@cea.fr>

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,6 +1,9 @@
 AM_CFLAGS= $(CC_OPT)
 
-check_PROGRAMS=test_common test_attrs
+check_PROGRAMS=test_common test_attrs test_mapper
+
 
 test_common_SOURCES=../common.c test_common.c
 test_attrs_SOURCES=../attrs.c test_attrs.c
+test_mapper_SOURCES=../mapper.c test_mapper.c
+test_mapper_LDADD=-lcrypto
