tests: run check programs on "make check".
Autotools automatically generate a 'make check' target that:
1) build 'check_PROGRAMS'
2) run all programs listed in 'TESTS' and generate a summary.

Change-Id: If716f9bc2f417980af53d499067baa8999c887f1

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,7 +1,10 @@
 AM_CFLAGS= $(CC_OPT)
 
+# autotools automatically generate a 'make check' target that:
+# 1) build check_PROGRAMS
+# 2) run TESTS and generate a summary
 check_PROGRAMS=test_common test_attrs test_mapper
-
+TESTS=test_attrs test_mapper
 
 test_common_SOURCES=../common.c test_common.c
 test_attrs_SOURCES=../attrs.c test_attrs.c
