LRS dummy implementation.
Function prototypes that return dummy paths for testing.

Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Change-Id: Ieb13073fb3264a968ac5b1adef63064585093218

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,4 +1,4 @@
-AM_CFLAGS= $(CC_OPT)
+AM_CFLAGS= $(CC_OPT) -D_TEST
 
 # autotools automatically generate a 'make check' target that:
 # 1) build check_PROGRAMS
