Object store: initial GET implementation.
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>
Change-Id: I2fc58c40eff271d472caa815106a88a4896c8a68

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -3,7 +3,7 @@ AM_CFLAGS= $(CC_OPT) -D_TEST
 # autotools automatically generate a 'make check' target that:
 # 1) build check_PROGRAMS
 # 2) run TESTS and generate a summary
-check_PROGRAMS=test_common test_attrs test_mapper test_log test_put
+check_PROGRAMS=test_common test_attrs test_mapper test_log test_store
 TESTS=test_attrs test_mapper test_log test_store.sh
 
 test_log_SOURCES=../log.c test_log.c
@@ -14,5 +14,5 @@ test_mapper_SOURCES=../mapper.c ../log.c test_mapper.c
 test_mapper_LDADD=-lcrypto
 test_attrs_LDADD=-ljansson
 
-test_put_SOURCES=../extent_utils.c ../store.c ../lrs.c ../attrs.c ../io.c ../mapper.c ../log.c test_put.c
-test_put_LDADD=-ljansson -lcrypto
+test_store_SOURCES=../extent_utils.c ../store.c ../lrs.c ../attrs.c ../io.c ../mapper.c ../log.c test_store.c
+test_store_LDADD=-ljansson -lcrypto
