Reorganize project tree and generate per-module library.
Reorganize project tree as 1 subdir per software layer.
Generate 1 libtool library per layer.
Test-only code is enabled by './configure --enable-tests'.

Change-Id: I6f3b191ddf5ede96aa55cbf92ee94fabcefb9d9c
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -70,12 +70,17 @@ AC_C_CONST
 AC_TYPE_UID_T
 AC_TYPE_SIZE_T
 
+AX_ENABLE_FLAG_COND([tests], [enable tests (developers only)], [-D_TEST], TESTS_ENABLED)
+
 # for exporting to spec file
 AC_SUBST(ac_configure_args)
 
 AC_CONFIG_FILES([Makefile
          src/Makefile
          src/include/Makefile
+         src/common/Makefile
+         src/lrs/Makefile
+         src/store/Makefile
          src/tests/Makefile
 ])
 AC_OUTPUT
