Added a logging infrastructure.
Code can now choose a log level between (debug|message|error|disabled)
and register custom callbacks to display the records however preferred.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Change-Id: I28f2e8b1c46273f7dbe6715dc3bf4d01e6553cea

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -3,13 +3,13 @@ AM_CFLAGS= $(CC_OPT)
 # autotools automatically generate a 'make check' target that:
 # 1) build check_PROGRAMS
 # 2) run TESTS and generate a summary
-check_PROGRAMS=test_common test_attrs test_mapper
-TESTS=test_attrs test_mapper
+check_PROGRAMS=test_common test_attrs test_mapper test_log
+TESTS=test_attrs test_mapper test_log
 
-test_common_SOURCES=../common.c test_common.c
-test_attrs_SOURCES=../attrs.c test_attrs.c
+test_log_SOURCES=../log.c test_log.c
+test_common_SOURCES=../common.c ../log.c test_common.c
+test_attrs_SOURCES=../attrs.c ../log.c test_attrs.c
+test_mapper_SOURCES=../mapper.c ../log.c test_mapper.c
 
-test_mapper_SOURCES=../mapper.c test_mapper.c
 test_mapper_LDADD=-lcrypto
-
 test_attrs_LDADD=-ljansson
