--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ src/include/stamp-h1
 config.status
 aclocal.m4
 autom4te.cache/
+autotools/compile
+autotools/config.guess
+autotools/config.sub
+autotools/depcomp
+autotools/install-sh
+autotools/ltmain.sh
+autotools/m4/libtool.m4
+autotools/m4/ltoptions.m4
+autotools/m4/ltsugar.m4
+autotools/m4/ltversion.m4
+autotools/m4/lt~obsolete.m4
+autotools/missing
+*.log
