autoconf: add missing checks (xattr.h, jansson.h, openssl headers)
Change-Id: I338fc0eee2482641c66654461e67eab1627a6b44

--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,10 @@ CFLAGS="$CFLAGS -I\$(top_srcdir)/src/include"
 AC_HEADER_STDC
 AC_CHECK_HEADERS([string.h sys/param.h limits.h])
 
+AC_CHECK_HEADERS([jansson.h], [], [AC_MSG_ERROR(missing jansson header files)])
+AC_CHECK_HEADERS([openssl/sha.h], [], [AC_MSG_ERROR(missing openssl libcrypt header files)])
+AC_CHECK_HEADERS([attr/xattr.h], [], [AC_MSG_ERROR(missing libattr header files)])
+
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_UID_T
