--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ Makefile.in
 config.h
 config.h.in
 *~
+#*#
+.#*
 .deps/
 config.log
 Makefile
@@ -12,6 +14,7 @@ src/include/stamp-h1
 config.status
 aclocal.m4
 autom4te.cache/
+autotools/ar-lib
 autotools/compile
 autotools/config.guess
 autotools/config.sub
@@ -24,4 +27,9 @@ autotools/m4/ltsugar.m4
 autotools/m4/ltversion.m4
 autotools/m4/lt~obsolete.m4
 autotools/missing
+autotools/test-driver
 *.log
+*.la
+*.lo
+cscope.*
+.libs
