--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,2 +1,2 @@
-NOINST_headers=pho_types.h pho_common.h pho_extents.h pho_attrs.h pho_lrs.h \
-               pho_io.h pho_mapper.h phobos_store.h
+NOINST_headers=pho_types.h pho_common.h pho_pho_extents.h pho_attrs.h pho_lrs.h \
+               pho_dss.h pho_io.h pho_mapper.h phobos_store.h
