config: get configuration from enviroment and config file.
Implements pho_cfg_get() for local use (don't use DSS yet for global
parameters).

Process-wide parameters can be passed via the environment as
PHOBOS_<SECTION>_<parameter> variables.

Host-wide configuration is a configuration file (ini format).
Default config file is '/etc/phobos.conf'. This can be
overridden by command line (path passed to pho_cfg_init_local())
or environment variable 'PHOBOS_CFG_FILE'.

Also, build tests when running 'make' to allow validating the build
without running the test suite.

Change-Id: I6c1daa5b106d2621c0897fbf3799f16b2437dafe

--- a/configure.ac
+++ b/configure.ac
@@ -85,6 +85,7 @@ AC_CONFIG_FILES([Makefile
          src/include/Makefile
          src/common/Makefile
          src/dss/Makefile
+         src/cfg/Makefile
          src/lrs/Makefile
          src/store/Makefile
          src/tests/Makefile
