--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -6,8 +6,8 @@ if TESTS_ENABLED
 # autotools automatically generate a 'make check' target that:
 # 1) build check_PROGRAMS
 # 2) run TESTS and generate a summary
-check_PROGRAMS=test_common test_attrs test_mapper test_log test_store
-TESTS=test_attrs test_mapper test_log test_store.sh
+check_PROGRAMS=test_common test_attrs test_mapper test_log test_store test_dss
+TESTS=test_attrs test_mapper test_log test_store.sh test_dss.sh
 
 test_log_SOURCES=test_log.c
 test_log_LDADD=../common/libpho_common.la
@@ -24,4 +24,6 @@ test_mapper_LDADD=../store/libphobos_store.la
 test_store_SOURCES=test_store.c
 test_store_LDADD=../store/libphobos_store.la
 
+test_dss_SOURCES=test_dss.c
+test_dss_LDADD=../dss/libpho_dss.la
 endif
