--- a/src/dss/Makefile.am
+++ b/src/dss/Makefile.am
@@ -3,4 +3,5 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_dss.la
 
 libpho_dss_la_SOURCES=dss.c
-libpho_dss_la_LIBADD=-lpq
+libpho_dss_la_CFLAGS=${LIBPQ_CFLAGS}
+libpho_dss_la_LIBADD=../common/libpho_common.la ${LIBPQ_LIBS}
