Avoid duplicate symbol definition in libraries.
When multiple noinst_LTLIBRARIES add the same lib, duplicate symbol
definitions occur.
In this patch, we only gather LT libraries when linking the end-user library
(libphobos_store) or binaries (test_*).

Change-Id: Iea63b9c736ac595b0b4615e44085f11a1ab201d6

--- a/src/cfg/Makefile.am
+++ b/src/cfg/Makefile.am
@@ -3,6 +3,4 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_cfg.la
 
 libpho_cfg_la_SOURCES=cfg.c
-# for now, CFG doesn't rely on DSS, but in the future, it will.
-#libpho_cfg_la_LIBADD=../dss/libpho_dss.la -lini_config
-libpho_cfg_la_LIBADD=../common/libpho_common.la -lini_config
+libpho_cfg_la_LIBADD=-lini_config
