--- a/src/store/Makefile.am
+++ b/src/store/Makefile.am
@@ -5,4 +5,4 @@ AM_CFLAGS= $(CC_OPT)
 lib_LTLIBRARIES=libphobos_store.la
 
 libphobos_store_la_SOURCES=mapper.c io.c store.c
-libphobos_store_la_LIBADD=../common/libpho_common.la ../dss/libpho_dss.la ../cfg/libpho_cfg.la ../lrs/libpho_lrs.la -lcrypto
+libphobos_store_la_LIBADD=../common/libpho_common.la ../dss/libpho_dss.la ../cfg/libpho_cfg.la ../ldm/libpho_ldm.la ../lrs/libpho_lrs.la -lcrypto
