gitignore: update and sort
Add entries for src/cli and sort the file lexicographically.

Change-Id: I1bbe14eed45a4e46e313e902d23e09c4613bea41

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
-*.o
-Makefile.in
-config.h
-config.h.in
-*~
 #*#
+*.la
+*.lo
+*.log
+*.o
+*.pyc
+*.so
+*~
 .#*
 .deps/
-config.log
+.libs
 Makefile
-configure
-libtool
-src/include/stamp-h1
-config.status
+Makefile.in
 aclocal.m4
 autom4te.cache/
 autotools/ar-lib
@@ -28,9 +27,13 @@ autotools/m4/ltversion.m4
 autotools/m4/lt~obsolete.m4
 autotools/missing
 autotools/test-driver
-*.log
-*.la
-*.lo
+config.h
+config.h.in
+config.log
+config.status
+configure
 cscope.*
-.libs
-*.pyc
+libtool
+src/cli/phobos/capi/*.py
+src/cli/phobos/capi/*_wrap.c
+src/include/stamp-h1
