ldm: add SCSI protocol types and execution function.
Add needed types to execute SCSI 'MODE SENSE' and 'ELEMENT STATUS'
commands, thus allowing to implement an equivalent of 'mtx status' on
tape libraries.

Change checkpatch.pl to allow __attribute__((packed)) instead of __packed
which is for kernel land.

Change-Id: I3ed0c09d8cb405372c7e84d021bd24adb7b1a730

--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -1,5 +1,8 @@
 AM_CFLAGS= $(CC_OPT)
 
-noinst_LTLIBRARIES=libpho_ldm.la
+noinst_LTLIBRARIES=libpho_ldm.la libpho_scsi.la
+
+libpho_scsi_la_SOURCES=scsi_common.h scsi_common.c
 
 libpho_ldm_la_SOURCES=ldm.c
+libpho_ldm_la_LIBADD=libpho_scsi.la
