ldm: add application-friendly SCSI API.
This implements application-friendly structures and calls to perform
SCSI operations.
Also add a related test (only run by root if /dev/changer is present).
This test must run before test_store.sh because LTFS operations
may keep the drive busy for a while.

Change-Id: Ieccbe1c67fafee4def7fb4864d15b5cadd80f3f6

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -3,8 +3,8 @@ AM_CFLAGS= $(CC_OPT)
 # autotools automatically generate a 'make check' target that:
 # 1) build check_PROGRAMS
 # 2) run TESTS and generate a summary
-check_PROGRAMS=test_common test_attrs test_mapper test_log test_store test_dss test_cfg
-TESTS=test_attrs test_mapper test_log test_cfg test_dss.sh test_store.sh
+check_PROGRAMS=test_common test_attrs test_mapper test_log test_store test_dss test_cfg test_scsi
+TESTS=test_attrs test_mapper test_log test_cfg test_dss.sh test_scsi.sh test_store.sh
 
 noinst_PROGRAMS=$(check_PROGRAMS)
 
@@ -34,3 +34,6 @@ test_dss_LDADD=../dss/libpho_dss.la ../common/libpho_common.la
 
 test_cfg_SOURCES=test_cfg.c
 test_cfg_LDADD=../cfg/libpho_cfg.la ../common/libpho_common.la
+
+test_scsi_SOURCES=test_scsi.c
+test_scsi_LDADD=../ldm/libpho_scsi.la ../common/libpho_common.la
