tests: reset DB before running CLI tests
Take test lock and clean DB before running CLI tests.

Change-Id: Iaf6260e16bb91e177e29e78eef39f74004409063

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -19,7 +19,11 @@ all-local:
 clean-local:
 	rm -f $(SWIG_MODULES) $(HAND_MODULES)
 
-check-local: all-local
+pre-check-local:
+	../tests/test_lock.sh
+
+check-local: all-local pre-check-local
 	(cd tests; ./run_tests.sh)
+	rm -f /tmp/phobos_test.lock
 
 .PHONY: all-local
