ldm: add a devname / serial mapping function
This function works for lin_tape devices.
Found entries are cached in memory.

Change-Id: Ic5ea53d4c10afdbd1a54b9f812b716ff1b344cf2

--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -4,5 +4,5 @@ noinst_LTLIBRARIES=libpho_ldm.la libpho_scsi.la
 
 libpho_scsi_la_SOURCES=scsi_common.h scsi_common.c scsi_api.h scsi_api.c
 
-libpho_ldm_la_SOURCES=ldm.c
+libpho_ldm_la_SOURCES=ldm.c lintape_lookup.c
 libpho_ldm_la_LIBADD=libpho_scsi.la
