--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -3,8 +3,14 @@ AM_CFLAGS= $(CC_OPT)
 # autotools automatically generate a 'make check' target that:
 # 1) build check_PROGRAMS
 # 2) run TESTS and generate a summary
-check_PROGRAMS=test_common test_attrs test_mapper test_log test_store test_dss test_cfg test_scsi
-TESTS=test_attrs test_mapper test_log test_cfg test_dss.sh test_scsi.sh test_store.sh
+check_PROGRAMS=test_common test_attrs test_mapper test_log test_store test_dss test_cfg test_scsi test_lintape
+
+# 1st step: low level tests
+UNIT_TESTS=test_attrs test_mapper test_log test_cfg test_lintape
+# 2nd step: integration tests
+INTEG_TESTS=test_dss.sh test_scsi.sh test_store.sh
+
+TESTS=$(UNIT_TESTS) $(INTEG_TESTS)
 
 noinst_PROGRAMS=$(check_PROGRAMS)
 
@@ -37,3 +43,6 @@ test_cfg_LDADD=../cfg/libpho_cfg.la ../common/libpho_common.la
 
 test_scsi_SOURCES=test_scsi.c
 test_scsi_LDADD=../ldm/libpho_scsi.la ../common/libpho_common.la
+
+test_lintape_SOURCES=test_lintape.c
+test_lintape_LDADD=../ldm/libpho_ldm.la ../common/libpho_common.la
