packaging: fix invalid variable name for headers.
'src/include/Makefile.am' did declare header files using a wrong
variable name.

Change-Id: I404a4fc4710ca3708164e85dc1ef59bf313aea3c

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,2 +1,6 @@
-NOINST_headers=pho_types.h pho_common.h pho_pho_extents.h pho_attrs.h pho_lrs.h \
-               pho_dss.h pho_io.h pho_mapper.h phobos_store.h
+noinst_HEADERS=pho_cfg.h  pho_common.h  pho_dss.h  pho_io.h  pho_ldm.h \
+		pho_lrs.h  pho_mapper.h  pho_type_utils.h  pho_types.h
+
+# only "phobos_store.h" is needed to access phobos
+# + "pho_attrs.h" to handle phobos user attributes.
+include_HEADERS=pho_attrs.h phobos_store.h
