packaging: add RPM build infrastructure.
Create a skeleton of spec file.
'make rpm' builds the RPM in 'rpms' sub-directory.

Change-Id: Ic48314c10209d942e01eedf6fcbc750f339917e9

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ libtool
 src/cli/phobos/capi/*.py
 src/cli/phobos/capi/*_wrap.c
 src/include/stamp-h1
+rpms/
+phobos-*.tar.gz
+phobos.spec
+*.orig
+*.rej
