ldm: add utility function to iterate on mount entries.
For future use in LDM adapters.
+Add related unit test.

Change-Id: Iea6ceb6d17d973a412c201cdff90f3f96300b6e8

--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -2,7 +2,9 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_ldm.la libpho_scsi.la
 
-libpho_scsi_la_SOURCES=scsi_common.h scsi_common.c scsi_api.h scsi_api.c
+noinst_HEADERS=scsi_common.h ldm_common.h
 
-libpho_ldm_la_SOURCES=ldm.c lintape_lookup.c ldm_lib_scsi.h ldm_lib_scsi.c
+libpho_scsi_la_SOURCES=scsi_common.c scsi_api.h scsi_api.c
+
+libpho_ldm_la_SOURCES=ldm.c lintape_lookup.c ldm_common.c ldm_lib_scsi.h ldm_lib_scsi.c
 libpho_ldm_la_LIBADD=libpho_scsi.la
