--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -10,6 +10,7 @@ Source0: %{name}-%{version}.tar.gz
 
 BuildRequires: postgresql94-devel
 BuildRequires: glib2-devel >= 2.28
+BuildRequires: python-devel
 BuildRequires: swig
 BuildRequires: jansson-devel
 BuildRequires: libref_array-devel
@@ -24,7 +25,10 @@ Requires: jansson
 Requires: libini_config
 Requires: openssl
 Requires: libattr
+Requires: python
 Requires: python-argparse
+Requires: python-yaml
+Requires: clustershell
 
 %description
 Phobos aims to implement high performance distributed object storage on a wide
@@ -37,6 +41,7 @@ in a SCSI library and local directories.
 
 
 %build
+export PKG_CONFIG_PATH=/usr/pgsql-9.4/lib/pkgconfig
 %configure
 make %{?_smp_mflags}
 
