ldm: SCSI and 'dummy' lib adapters.
Adap SCSI lib adapter to the new adapter interface.

Also implements a 'dummy' lib adapter to manage media
that are always online (like standard disks, directories, ...).
This will avoid specific handling in LRS layer.

Change-Id: Ifaaa14317446f5406ba3cbc6af51ccd75865ce20

--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -2,9 +2,10 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_ldm.la libpho_scsi.la
 
-noinst_HEADERS=scsi_common.h ldm_common.h
+noinst_HEADERS=scsi_common.h ldm_common.h scsi_api.h
 
-libpho_scsi_la_SOURCES=scsi_common.c scsi_api.h scsi_api.c
+libpho_scsi_la_SOURCES=scsi_common.c scsi_api.c
 
-libpho_ldm_la_SOURCES=ldm.c lintape_lookup.c ldm_common.c ldm_lib_scsi.h ldm_lib_scsi.c
+libpho_ldm_la_SOURCES=ldm.c lintape_lookup.c ldm_common.c ldm_lib_dummy.c \
+		      ldm_lib_scsi.c
 libpho_ldm_la_LIBADD=libpho_scsi.la
