--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -46,7 +46,7 @@ test_scsi_SOURCES=test_scsi.c
 test_scsi_LDADD=../ldm/libpho_scsi.la ../common/libpho_common.la
 
 test_lintape_SOURCES=test_lintape.c
-test_lintape_LDADD=../ldm/libpho_ldm.la ../common/libpho_common.la
+test_lintape_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
 
 test_ldm_SOURCES=test_ldm.c
 test_ldm_LDADD=../ldm/libpho_ldm.la ../common/libpho_common.la
