cli: implement device add
Generate SWIG bindings for a set of elements from LDM.
Leverage those to implement {dir,drive} add. To do so,
retrieve a dev adapter, query the device and insert
information into DSS.

Change-Id: Ibe6c1c97c9c9dd5030740a94c8a0880226974227

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -9,7 +9,10 @@ SWIG_MODULES=phobos/capi/config.py \
 	     phobos/capi/dss_wrap.c
 	     phobos/capi/lrs.py \
 	     phobos/capi/_lrs.so \
-	     phobos/capi/lrs_wrap.c
+	     phobos/capi/lrs_wrap.c \
+	     phobos/capi/ldm.py \
+	     phobos/capi/_ldm.so \
+	     phobos/capi/ldm_wrap.c
 
 HAND_MODULES=phobos/capi/clogging.so
 
@@ -18,6 +21,7 @@ all-local:
 	swig -python -I../include phobos/capi/config.i
 	swig -python -I../include phobos/capi/dss.i
 	swig -python -I../include phobos/capi/lrs.i
+	swig -python -I../include phobos/capi/ldm.i
 	python setup.py build_ext --inplace --verbose
 
 clean-local:
