packaging: add 'pho_ldm_helper' to dist tar.
Change-Id: Ia8aef431ce7cf02865cc4c34aa5b8083b5254186

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,4 +8,6 @@ rpm: dist phobos.spec
 	mkdir -p $(rpm_dir)/BUILD $(rpm_dir)/SPECS $(rpm_dir)/SRPMS $(rpm_dir)/RPMS
 	rpmbuild --define="_topdir $(rpm_dir)" -tb $(distdir).tar.gz
 
-EXTRA_DIST= phobos.spec phobos.spec.in
+EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper
+
+sbin_SCRIPTS=scripts/pho_ldm_helper
