ldm: implement ldm_fs_df() to get FS usage stats.
ldm_fs_df() returns used and available bytes in a filesystem.

Change-Id: I26fe8745491e776eaffa4f114a5fc7784a224b34

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -49,4 +49,4 @@ test_lintape_SOURCES=test_lintape.c
 test_lintape_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
 
 test_ldm_SOURCES=test_ldm.c
-test_ldm_LDADD=../ldm/libpho_ldm.la ../common/libpho_common.la
+test_ldm_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
