--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -9,7 +9,7 @@ check_PROGRAMS=test_common test_attrs test_mapper test_log test_store \
 # 1st step: low level tests
 UNIT_TESTS=test_attrs test_mapper test_log test_cfg test_lintape test_ldm
 # 2nd step: integration tests
-INTEG_TESTS=test_dss.sh test_scsi.sh test_store.sh
+INTEG_TESTS=test_dss.sh test_scsi.sh test_store.sh acceptance.sh
 
 TESTS=$(UNIT_TESTS) $(INTEG_TESTS)
 
