cli: expose GET/PUT to command line
Changed phobos_{get/put/mput} prototypes to make them more consistent W.R.T.
const qualifiers. They now take a unique callback and udata pointer per call
instead of one per slice.

Use swig-black-voodoo to make these functions operate on a python list of
xfer descriptors and return a list of ordered error codes. Expose everything
to the command line.

The following commands are now available:
    phobos get <oid> <file>
    phobos put <file> <oid>
    phobos mput <list>

Change-Id: I1cd9b8d93d6bd57e35e9d532f5bb5e491931804d
Phobos-Issue: PHO-88

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -12,7 +12,10 @@ SWIG_MODULES=phobos/capi/cfg.py \
 	     phobos/capi/lrs_wrap.c \
 	     phobos/capi/ldm.py \
 	     phobos/capi/_ldm.so \
-	     phobos/capi/ldm_wrap.c
+	     phobos/capi/ldm_wrap.c \
+	     phobos/capi/store.py \
+	     phobos/capi/_store.so \
+	     phobos/capi/store_wrap.c
 
 HAND_MODULES=phobos/capi/log.so
 
@@ -22,6 +25,7 @@ all-local:
 	swig -python -I../include phobos/capi/dss.i
 	swig -python -I../include phobos/capi/lrs.i
 	swig -python -I../include phobos/capi/ldm.i
+	swig -python -I../include phobos/capi/store.i
 	python setup.py build_ext --inplace --verbose
 
 clean-local:
