ldm/scsi: display text message associated to SCSI errors.
Use libsgutils helpers to display meaningful SCSI error message.

Change-Id: Ie02984af061c94afc1c00a2d795a58e83f15186c

--- a/src/ldm/Makefile.am
+++ b/src/ldm/Makefile.am
@@ -5,6 +5,7 @@ noinst_LTLIBRARIES=libpho_ldm.la libpho_scsi.la
 noinst_HEADERS=scsi_common.h ldm_common.h scsi_api.h
 
 libpho_scsi_la_SOURCES=scsi_common.c scsi_api.c
+libpho_scsi_la_LIBADD=-lsgutils2
 
 libpho_ldm_la_SOURCES=ldm.c ldm_common.c ldm_lib_scsi.c ldm_lib_dummy.c \
 		      ldm_dev_dir.c ldm_dev_lintape.c ldm_fs_posix.c \
