--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -62,7 +62,7 @@ cd %{_builddir}/%{name}-%{version}/src/cli/
 %files
 
 %{_libdir}/libphobos_store.so.*
-%{_sbindir}/pho_ldm_helper
+%{_sbindir}/pho_*_helper
 %{python_sitearch}/phobos/*
 %{python_sitearch}/phobos-*-py?.?.egg-info
 %{_bindir}/phobos
