dss: fix makefile issue and types warning
Add missings flags in dss makefile
Fix types issues (warning) in dss (size_t>int, ..)

Change-Id: I5314b0755d8b472f3d7c74613dd3dca16ad75e00
Phobos-Issue: PHO-104

--- a/src/dss/Makefile.am
+++ b/src/dss/Makefile.am
@@ -3,5 +3,5 @@ AM_CFLAGS= $(CC_OPT)
 noinst_LTLIBRARIES=libpho_dss.la
 
 libpho_dss_la_SOURCES=dss.c
-libpho_dss_la_CFLAGS=${LIBPQ_CFLAGS}
+libpho_dss_la_CFLAGS=${LIBPQ_CFLAGS} ${AM_CFLAGS}
 libpho_dss_la_LIBADD=${LIBPQ_LIBS}
