build: fix sources of warnings when building RPMs
Misc minor fixes to calm down rpmbuild.

Change-Id: I84d2bda93ff4c8f411165ec8cfa23a7ac7929855
Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Phobos-Issue: PHO-104

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ rpm_dir=`pwd`/rpms
 
 rpm: dist phobos.spec
 	mkdir -p $(rpm_dir)/BUILD $(rpm_dir)/SPECS $(rpm_dir)/SRPMS $(rpm_dir)/RPMS
-	rpmbuild --define="_topdir $(rpm_dir)" -tb $(distdir).tar.gz
+	rpmbuild --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
 
 EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper scripts/pho_dss_helper doc/INSTALL
 
