cfg: each module defines its own configuration.
Configuration variables and default values were previously
defined in single centralized header. These values are now
defined independantly by each module. This prepares the
support of dynamically loaded modules so they can define their
own parameters.

Change-Id: I328cfaeb9815568ccd0bcec7eb4b2138b46daef6
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2040
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/src/lrs/Makefile.am
+++ b/src/lrs/Makefile.am
@@ -2,4 +2,4 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_lrs.la
 
-libpho_lrs_la_SOURCES=lrs.c
+libpho_lrs_la_SOURCES=lrs.c lrs_cfg.h lrs_cfg.c
