layout: introduce new layout management layer
Layout modules are autonomous implementations of a given layout type.
They abstract actual object layouts by translating data xfer requests
into corresponding storage resources and manipulation.

Although the layout code is interleaved with the store state machine, layout
can be seen as an interface between store and {LRS, IO}.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Phobos-Issue: PHO-121
Change-Id: Ie5f6e6aa45ea6e5e76d3f84611acb805239b24c3
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2059
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -95,7 +95,10 @@ AC_CONFIG_FILES([Makefile
          src/dss/Makefile
          src/cfg/Makefile
          src/lrs/Makefile
+         src/io/Makefile
+         src/layout/Makefile
          src/store/Makefile
+         src/layout-modules/Makefile
          src/tests/Makefile
          src/cli/Makefile
          phobos.spec
