--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 AM_CFLAGS= $(CC_OPT)
 
-SUBDIRS=include common ldm dss cfg lrs store cli tests
+SUBDIRS=include common ldm dss cfg lrs io layout store layout-modules cli tests
