--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -1,6 +1,8 @@
 noinst_HEADERS=pho_cfg.h  pho_common.h  pho_dss.h  pho_io.h  pho_ldm.h \
-		pho_lrs.h  pho_mapper.h  pho_type_utils.h  pho_types.h
+		pho_lrs.h  pho_mapper.h  pho_type_utils.h  pho_types.h \
+		pho_layout.h
 
-# only "phobos_store.h" is needed to access phobos
-# + "pho_attrs.h" to handle phobos user attributes.
+# Required headers:
+#   - phobos_store.h  main program interface
+#   - pho_attrs.h     access and manipulate object metadata
 include_HEADERS=pho_attrs.h phobos_store.h
