--- a/src/store/Makefile.am
+++ b/src/store/Makefile.am
@@ -4,7 +4,8 @@ AM_CFLAGS= $(CC_OPT)
 # and can be used by client apps.
 lib_LTLIBRARIES=libphobos_store.la
 
-libphobos_store_la_SOURCES=mapper.c io.c store.c
+libphobos_store_la_SOURCES=store.c
 libphobos_store_la_LIBADD=../common/libpho_common.la ../dss/libpho_dss.la \
 			  ../cfg/libpho_cfg.la ../ldm/libpho_ldm.la \
-			  ../lrs/libpho_lrs.la -lcrypto
+			  ../lrs/libpho_lrs.la ../layout/libpho_layout.la \
+			  ../io/libpho_io.la -lcrypto
