doc: add a template configuration.
Add a template configuration with comments.
Included to the RPM, it is initially installed
as "/etc/phobos.conf" (if it does not already exists).
Else it will be installed as /etc/phobos.conf.rpmnew

Change-Id: I885f13e30e3a6689af007a56a1405e2a29c2fa56
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2043
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -54,10 +54,9 @@ make %{?_smp_mflags}
 
 %install
 %make_install
+install -D -p -m 0640 doc/cfg/template.conf %{buildroot}/%{_sysconfdir}/phobos.conf
 cd %{_builddir}/%{name}-%{version}/src/cli/
 %{__python} setup.py install --skip-build --root %{buildroot}
-
-
 
 %files
 
@@ -66,6 +65,7 @@ cd %{_builddir}/%{name}-%{version}/src/cli/
 %{python_sitearch}/phobos/*
 %{python_sitearch}/phobos-*-py?.?.egg-info
 %{_bindir}/phobos
+%config(noreplace) %{_sysconfdir}/phobos.conf
 
 %files devel
 
