--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,7 @@ rpm: dist phobos.spec
 	mkdir -p $(rpm_dir)/BUILD $(rpm_dir)/SPECS $(rpm_dir)/SRPMS $(rpm_dir)/RPMS
 	rpmbuild --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
 
-EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper scripts/pho_dss_helper doc/INSTALL
+EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper \
+	    scripts/pho_dss_helper doc/INSTALL doc/cfg/template.conf
 
 sbin_SCRIPTS=scripts/pho_ldm_helper scripts/pho_dss_helper
