doc/config: add store's 'layout' parameter to config template
Add store's 'layout' parameter to config template.
This parameter determines which layout must be used for put operations.

Change-Id: I0b67af1f254b3a6c21c2303a329845dc536659ce
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2574
Reviewed-by: Linter
Tested-by: Jenkins
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -33,3 +33,7 @@ sep_sn_query   = 0
 cmd_mount      = /usr/sbin/pho_ldm_helper mount  "%s" "%s"
 cmd_umount     = /usr/sbin/pho_ldm_helper umount "%s" "%s"
 cmd_format     = /usr/sbin/pho_ldm_helper format "%s" "%s"
+
+[store]
+# default layout for put operations
+layout = simple
