scripts: phobos 1.0 to 1.1 DB conversion
Adds a simple script 'pho_convert_db_10to11.sh' to convert DB schema
from phobos 1.0 to phobos 1.1.

Change-Id: I5b9a8d7410114453bad1f76f74652d26d9e842f8
Reviewed-on: https://cws-fleury.labs.ocre.cea.fr/gerrit/2575
Reviewed-by: Linter
Reviewed-by: Henri Doreau <henri.doreau@cea.fr>
Tested-by: Jenkins

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,8 @@ rpm: dist phobos.spec
 	rpmbuild --define="_topdir $(rpm_dir)" -ta $(distdir).tar.gz
 
 EXTRA_DIST= phobos.spec phobos.spec.in scripts/pho_ldm_helper \
-	    scripts/pho_dss_helper doc/INSTALL doc/cfg/template.conf
+	    scripts/pho_dss_helper scripts/pho_convert_db_10to11.sh \
+	    doc/INSTALL doc/cfg/template.conf
 
-sbin_SCRIPTS=scripts/pho_ldm_helper scripts/pho_dss_helper
+sbin_SCRIPTS=scripts/pho_ldm_helper scripts/pho_dss_helper \
+             scripts/pho_convert_db_10to11.sh
