--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -67,6 +67,7 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_store.so.*
 %{_libdir}/phobos/libpho_layout_*.so*
 %{_sbindir}/pho_*_helper
+%{_sbindir}/pho_convert_*
 %{python_sitearch}/phobos/*
 %{python_sitearch}/phobos-*-py?.?.egg-info
 %{_bindir}/phobos
